# compressAI-TensorRT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_abandoned.cpp
includes/: compress_base.h  compress_base.hpp  compress_models.h  compress_models.hpp  encode.h  image.h  read_raw_cuda.h
models/: cdf_bmshj2018-factorized_1.json  cdf_bmshj2018-factorized_2.json  cdf_bmshj2018-factorized_3.json  cdf_bmshj2018-factorized_4.json  cdf_bmshj2018-factorized_5.json  cdf_bmshj2018-factorized_6.json  cdf_bmshj2018-factorized_7.json  cdf_bmshj2018-factorized_8.json
pyDemo/: MyTest.py  splitRaw.py  withSplit.py
src/: compress_base.cpp  compress_models.cpp  encode.cpp  image.cpp  rans_interface.cpp  read_raw_cuda.cu
